--- a/crtvn-center/src/main/resources/static/login.html
+++ b/crtvn-center/src/main/resources/static/login.html
@@ -47,7 +47,7 @@
                     <div class="code clearfix">
                         <span>验证码：</span> <input id="code" type="text" name="code"/>
                         <em>
-                            <img src="" id="verificationCode" width="127"
+                            <img src="" width="127"
                                  height="35" id="codeImg" alt="点击更换" title="点击更换">
                         </em>
                     </div>
