--- a/crtvn-center/src/main/resources/static/login.html
+++ b/crtvn-center/src/main/resources/static/login.html
@@ -72,8 +72,8 @@
         return base_url;
     }
 
-    function getTokenUrl() {
-        return base_url;
+    function getCodeUrl() {
+        return base_code_url;
     }
 
 </script>
